--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/free-regular-svg-icons": "^5.10.2",
+    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
     "express-session": "^1.16.2",
+    "font-awesome": "^4.7.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.3.16",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react": "^16.9.0"
   }
 }
